Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39034

Exit crash when using QQuickWidget on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.1
    • 5.3.0 RC1
    • Quick: Widget
    • None
    • Windows 64bit MSVC2013, ANGLE
    • 31f0e3aa00f80ba4a0f4a06cf2ca4121b86f41b7

      Using the example qtbug37404qw.zip from QTBUG-37404 on exit:

      ASSERT: "QOpenGLContext::currentContext()" in file scenegraph\util\qsgatlastexture.cpp, line 194
      
      0	NtUserWaitMessage	USER32		0x7ff81c6a102a	
      1	DialogBox2	USER32		0x7ff81c6d07e3	
      2	InternalDialogBox	USER32		0x7ff81c6d219a	
      3	SoftModalMessageBox	USER32		0x7ff81c6d6a52	
      4	MessageBoxWorker	USER32		0x7ff81c6d620a	
      5	MessageBoxTimeoutW	USER32		0x7ff81c72359e	
      6	MessageBoxW	USER32		0x7ff81c72360e	
      7	__crtMessageBoxW	crtmbox.c	250	0x7ffff0fe7509	
      8	__crtMessageWindowW	dbgrpt.c	391	0x7ffff0fdbe1b	
      9	_VCrtDbgReportW	dbgrptt.c	672	0x7ffff0fe6b36	
      10	_CrtDbgReportWV	dbgrpt.c	263	0x7ffff0fdb3b0	
      11	_CrtDbgReportW	dbgrpt.c	279	0x7ffff0fdb340	
      12	qt_message_fatal	qlogging.cpp	1329	0x652c348a	
      13	QMessageLogger::fatal	qlogging.cpp	669	0x652c2ab5	
      14	qt_assert	qglobal.cpp	2125	0x652ba8c2	
      15	QSGAtlasTexture::Atlas::invalidate	qsgatlastexture.cpp	194	0x7ffff1b9fd6e	
      16	QSGAtlasTexture::Manager::invalidate	qsgatlastexture.cpp	123	0x7ffff1b9fae3	
      17	QSGRenderContext::invalidate	qsgcontext.cpp	485	0x7ffff1bb9e78	
      18	QSGRenderContext::~QSGRenderContext	qsgcontext.cpp	337	0x7ffff1bb9b52	
      19	QSGRenderContext::`vector deleting destructor'	Qt5Quickd		0x7ffff1bbe838	
      20	QQuickRenderControlPrivate::~QQuickRenderControlPrivate	qquickrendercontrol.cpp	76	0x7ffff1c54a40	
      21	QQuickRenderControlPrivate::`scalar deleting destructor'	Qt5Quickd		0x7ffff1c54bf7	
      22	QScopedPointerDeleter<QObjectData>::cleanup	qscopedpointer.h	62	0x65760289	
      23	QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >::~QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >	qscopedpointer.h	110	0x6575f0d0	
      24	QObject::~QObject	qobject.cpp	1034	0x6575152d	
      25	QQuickRenderControl::~QQuickRenderControl	qquickrendercontrol.cpp	101	0x7ffff1c54273	
      26	QQuickWidgetRenderControl::~QQuickWidgetRenderControl	Qt5QuickWidgetsd		0x7ffff234c384	
      27	QQuickWidgetRenderControl::`scalar deleting destructor'	Qt5QuickWidgetsd		0x7ffff234f627	
      28	QQuickWidgetPrivate::~QQuickWidgetPrivate	qquickwidget.cpp	138	0x7ffff2345d4b	
      29	QQuickWidgetPrivate::`scalar deleting destructor'	Qt5QuickWidgetsd		0x7ffff234f5d7	
      30	QScopedPointerDeleter<QObjectData>::cleanup	qscopedpointer.h	62	0x65760289	
      31	QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >::~QScopedPointer<QObjectData,QScopedPointerDeleter<QObjectData> >	qscopedpointer.h	110	0x6575f0d0	
      32	QObject::~QObject	qobject.cpp	1034	0x6575152d	
      33	QWidget::~QWidget	qwidget.cpp	1510	0x65debd19	
      34	QQuickWidget::~QQuickWidget	qquickwidget.cpp	328	0x7ffff2343956	
      35	QQuickWidget::`scalar deleting destructor'	qtbug37404qw		0x7ff6874d5b88	
      36	QObjectPrivate::deleteChildren	qobject.cpp	1935	0x65756f86	
      37	QWidget::~QWidget	qwidget.cpp	1492	0x65debc53	
      38	QGroupBox::~QGroupBox	qgroupbox.cpp	216	0x65fe5102	
      39	QGroupBox::`scalar deleting destructor'	qtbug37404qw		0x7ff6874d5a98	
      40	QObjectPrivate::deleteChildren	qobject.cpp	1935	0x65756f86	
      41	QWidget::~QWidget	qwidget.cpp	1492	0x65debc53	
      42	QWidget::`scalar deleting destructor'	qtbug37404qw		0x7ff6874d5c78	
      43	QObjectPrivate::deleteChildren	qobject.cpp	1935	0x65756f86	
      44	QWidget::~QWidget	qwidget.cpp	1492	0x65debc53	
      45	QMainWindow::~QMainWindow	qmainwindow.cpp	388	0x66009022	
      46	MainWindow::~MainWindow	qtbug37404qw		0x7ff6874d56b4	
      47	main	main.cpp	122	0x7ff6874d4395	
      48	WinMain	qtmain_win.cpp	131	0x7ff6874d9b71	
      49	__tmainCRTStartup	crtexe.c	618	0x7ff6874d93b1	
      50	WinMainCRTStartup	crtexe.c	466	0x7ff6874d912e	
      51	BaseThreadInitThunk	KERNEL32		0x7ff81c8216ad	
      52	RtlUserThreadStart	ntdll		0x7ff81edd4629	
      

        For Gerrit Dashboard: QTBUG-39034
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            kleint Friedemann Kleint
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes